# lifx_esp32_local_ap

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  console.c  console_cmd.c  data_structure.c  device_list.c  idf_component.yml  init_console.c  main.c  network_init.c  rx_parser.c  tx_encode.c
main/include/: lifx_struct_def.h  main.h  wifi_cred.h
