idf_component_register(SRCS "device_list.c"
                            "network_init.c"
                            "tx_encode.c"
                            "rx_parser.c"
                            "device_list.c"
                            "network_init.c"
                            "main.c"

                    INCLUDE_DIRS ".")