idf_component_register(
    SRCS 
        "data_structure.c"
        "console_cmd.c"
        "console.c"
        "tx_encode.c"
        "rx_parser.c"
        "main.c"
        "data_structure.c"
        "console_cmd.c"
        "console.c"
        "tx_encode.c"
        "rx_parser.c"
    INCLUDE_DIRS 
        "."
    REQUIRES 
        console 
        driver
)